# DoYouWantToCmyAlgorithms_

./: CMakeLists.txt  README.md  generate.c  main.c
algorithms/: maze_generator_backtracking.c  maze_generator_recursive_backtracking.c
geneticMazeGeneration/: CMakeLists.txt  README.md  main.c  main.cpp  solve.c
geneticMazeGeneration/include/: heap.h  maze.h  random.h  types.h
geneticMazeGeneration/src/: astar.cpp  heap.c  maze.c
include/: maze_generator_backtracking.h  maze_generator_recursive_backtracking.h  types.h
mazeGeneration/: CMakeLists.txt  README.md  generate.c  main.c
mazeGeneration/include/: maze_generator_backtracking.h  types.h
mazeGeneration/src/: maze_generator_backtracking.c
mazeSolver/: CMakeLists.txt  README.md  geneticMazeGenerator.c  main.c  solve.c
mazeSolver/include/: heap.h  maze.h
mazeSolver/src/: heap.c  maze.c  random.c
mazeSolverExperimental/: CMakeLists.txt  solve.c
mazeSolverExperimental/include/: maze.h  queue.h
mazeSolverExperimental/src/: maze.c  queue.c
snakeAi/: CMakeLists.txt  brain.cpp
snakeAi/include/: game.h
snakeAi/src/: game.cpp  visualized_game.cpp
